--- a/app/src/main/res/layout/items_layout.xml
+++ b/app/src/main/res/layout/items_layout.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/parentView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/parentView">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="50dp"
         android:gravity="center_vertical"
+        android:minHeight="50dp"
         android:padding="10dp" />
 
     <View
