--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/random"
+    <item
+        android:id="@+id/random"
         android:icon="@drawable/ic_image_black_24dp"
         android:title="@string/random_image" />
 </menu>
