--- a/app/src/main/res/layout/items_layout.xml
+++ b/app/src/main/res/layout/items_layout.xml
@@ -12,7 +12,11 @@
         android:layout_height="wrap_content"
         android:gravity="start|center"
         android:minHeight="50dp"
-        android:padding="10dp" />
+        android:padding="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <View
         android:id="@+id/view"
